Add Syntax Highlighter and expand TraME site

--- a/bmr.html
+++ b/bmr.html
@@ -70,7 +70,7 @@ pre {
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.kthohr.com">Keith O'Hara</a>
+                <a class="navbar-brand" href="http://www.kthohr.com" style="color:white">Keith O'Hara</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
