--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -29,6 +29,10 @@ h3:target { padding-top: 60px; margin-top: -60px;}
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Syntax Highlighter -->
+    <script type="text/javascript" src="js/syntaxhighlighter.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/swift_theme.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,11 +42,13 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
 </head>
 
+<!--
 <style>
 pre {
     display: inline-block;
 }
 </style>
+-->
 
 <body>
 
@@ -57,7 +63,7 @@ pre {
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.kthohr.com">Keith O'Hara</a>
+                <a class="navbar-brand" href="http://www.kthohr.com" style="color:white">Keith O'Hara</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -158,7 +164,7 @@ pre {
     <li> Get Xcode from the App Store. (The page should look something like <a href="https://itunes.apple.com/us/app/xcode/id497799835?mt=12" target="_blank">this</a>.) The latest version of Xcode should install the <b>command line tools</b> by default.</li>
     <ul>
         <li>Open a terminal window&#8212;search spotlight for 'terminal' if you've never needed terminal/bash before&#8212;and type:</li>
-        <pre>
+        <pre  class="brush: bash;">
 clang++ -v</pre>
         <li>You should see something similar to</li>
         <pre>
@@ -172,14 +178,14 @@ Thread model: posix</pre>
 <p>The following items are from the <a href="https://r.research.att.com/libs/" target="_blank">R-devel optional library list</a>.</p>
 <ul>
         <li>Unfortunately, Xcode does not include a Fortran compiler, which we will need. The simplest way to obtain an R-compatible version of <b>gfortran</b> is to open a terminal window and type:</li>
-    <pre>
+    <pre  class="brush: bash;">
 cd ~/Desktop
 curl -O http://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
 sudo tar fvxz gfortran-4.8.2-darwin13.tar.bz2 -C /</pre>
 
     <p>(The 'sudo' command requires you to enter your password&#8212;this is because we are placing files into areas that are password restricted (/usr/local).)</p>
     <li>We also need pkg-config, xz, and pcre:</li>
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop
 curl -O http://r.research.att.com/libs/pkgconfig-0.28-darwin.13-x86_64.tar.gz
 sudo tar fvxz pkgconfig-0.28-darwin.13-x86_64.tar.gz -C /
@@ -188,7 +194,7 @@ sudo tar fvxz xz-5.2.1-darwin.13-x86_64.tar.gz -C /
 curl -O http://r.research.att.com/libs/pcre-8.36-darwin.13-x86_64.tar.gz
 sudo tar fvxz pcre-8.36-darwin.13-x86_64.tar.gz -C /</pre>
     <li>Finally, for creating images, we need JPEG, PNG, and TIFF libraries:</li>
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop
 curl -O http://r.research.att.com/libs/jpeg-9-darwin.13-x86_64.tar.gz
 sudo tar fvxz jpeg-9-darwin.13-x86_64.tar.gz -C /
@@ -204,12 +210,12 @@ sudo tar fvxz tiff-4.0.3-darwin.13-x86_64.tar.gz -C /</pre>
 
 <p>Create a folder to work in. For example,</p>
 
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop
 mkdir R</pre>
 
 <p>Then download and unpack the latest development version of R:</p>
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop/R
 curl -O ftp://ftp.stat.math.ethz.ch/Software/R/R-devel.tar.gz
 tar -zxvf R-devel.tar.gz</pre>
@@ -220,7 +226,7 @@ tar -zxvf R-devel.tar.gz</pre>
 
 <p>Open the 'config.site' file in '~/Desktop/R/R-devel' and change the contents to the following:</p>
 
-<pre>
+<pre  class="brush: bash;">
 #! /bin/sh
 
 CC=clang
@@ -242,20 +248,20 @@ JAVA_LD_LIBRARY_PATH="${JAVA_HOME}/jre/lib/server"
 JAVA_LIBS="-L/${JAVA_HOME}/jre/lib/server -ljvm"</pre>
 
 <p>Open a terminal window and switch to the R-devel folder:</p>
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop/R/R-devel</pre>
 <p>Set the pkg-config path as follows:</p>
-<pre>
+<pre  class="brush: bash;">
 export PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/lib/pkgconfig</pre>
 
 <p>Now we have two choices. If you want to link against the OpenBLAS library (assuming you have it...) run</p>
-<pre>
+<pre  class="brush: bash;">
 ./configure --prefix=/Builds/R-devel --without-x --without-internal-tzcode \
 	--with-blas="-lopenblas" --with-lapack \
 		--enable-R-shlib --enable-memory-profiling
 </pre>
 <p>or, to link against the Accelerate framework (which is pre-installed on all Macs), run</p>
-<pre>
+<pre  class="brush: bash;">
 ./configure --prefix=/Builds/R-devel --without-x --without-internal-tzcode \
 	--with-blas="-framework Accelerate" --with-lapack \
 		--enable-R-shlib --enable-memory-profiling
@@ -264,16 +270,16 @@ export PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/lib/
 <h3 style="text-align: left;" id="Build"><strong style="font-size: 120%;">Build and Install</strong></h3>
 
 <p>To build R-devel, use</p>
-<pre>
+<pre  class="brush: bash;">
 cd ~/Desktop/R/R-devel
 make</pre>
 
 <p>The build checks are run using:</p>
-<pre>
+<pre  class="brush: bash;">
 make check</pre>
 
 <p>Finally, we need to choose an install location for R-devel; I use /Builds/R-devel, but I recommend installing to somewhere that doesn't require sudo privileges.</p>
-<pre>
+<pre  class="brush: bash;">
 sudo make prefix=/Builds/R-devel install</pre>
 
 <hr>
@@ -281,17 +287,17 @@ sudo make prefix=/Builds/R-devel install</pre>
 <h3 style="text-align: left;" id="Call"><strong style="font-size: 120%;">Calling R-devel</strong></h3>
 
 <p>For easy access to R-devel from a terminal window, add the following lines of code to your bash profile:</p>
-<pre>
+<pre  class="brush: bash;">
 alias Rdevel="/where/I/installed/to/bin/R"</pre>
 <p>For example,</p>
-<pre>
+<pre  class="brush: bash;">
 alias Rdevel="/Builds/R-devel/bin/R"</pre>
 <p>To run R-devel with sudo privileges, you need to also add</p>
-<pre>
+<pre  class="brush: bash;">
 alias sudo='sudo '</pre>
 
 <p>To run R-devel from <a href"https://www.rstudio.com/" target="_blank">RStudio</a>, use</p>
-<pre>
+<pre  class="brush: bash;">
 export RSTUDIO_WHICH_R=/where/I/installed/to/bin/R
 open -n -a RStudio</pre>
 
