--- a/trame_docs_arums_probit.html
+++ b/trame_docs_arums_probit.html
@@ -139,6 +139,15 @@
                         </ul>
                     </li>
                     <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">MMFs <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="trame_docs_mmfs_etu.html">ETU</a></li>
+                            <li><a href="trame_docs_mmfs_ltu.html">LTU</a></li>
+                            <li><a href="trame_docs_mmfs_ntu.html">NTU</a></li>
+                            <li><a href="trame_docs_mmfs_tu.html">TU</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Transfers <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="trame_docs_transfers_etu.html">ETU</a></li>
