--- a/trame_docs_arums_none.html
+++ b/trame_docs_arums_none.html
@@ -130,6 +130,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">ARUMs <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="trame_docs_arums.html">ARUMs</a></li>
+                            <li class="divider"></li>
                             <li><a href="trame_docs_arums_empirical.html">Empirical</a></li>
                             <li><a href="trame_docs_arums_logit.html">Logit</a></li>
                             <li class="active"><a href="trame_docs_arums_none.html">None</a></li>
@@ -141,6 +143,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">MMFs <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="trame_docs_mmfs.html">MMFs</a></li>
+                            <li class="divider"></li>
                             <li><a href="trame_docs_mmfs_etu.html">ETU</a></li>
                             <li><a href="trame_docs_mmfs_ltu.html">LTU</a></li>
                             <li><a href="trame_docs_mmfs_ntu.html">NTU</a></li>
@@ -150,6 +154,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Transfers <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="trame_docs_transfers.html">Transfers</a></li>
+                            <li class="divider"></li>
                             <li><a href="trame_docs_transfers_etu.html">ETU</a></li>
                             <li><a href="trame_docs_transfers_ltu.html">LTU</a></li>
                             <li><a href="trame_docs_transfers_ntu.html">NTU</a></li>
@@ -159,6 +165,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Markets <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="trame_docs_markets.html">Markets</a></li>
+                            <li class="divider"></li>
                             <li><a href="trame_docs_dse.html">DSE</a></li>
                             <li><a href="trame_docs_mfe.html">MFE</a></li>
                         </ul>
@@ -166,6 +174,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solvers <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="trame_docs_solvers.html">Solvers</a></li>
+                            <li class="divider"></li>
                             <li><a href="trame_docs_solvers_arc_newton.html">Arc Newton</a></li>
                             <li><a href="trame_docs_solvers_cupids_lp.html">Cupids LP</a></li>
                             <li><a href="trame_docs_solvers_darum.html">DA RUM</a></li>
