--- a/bmr.html
+++ b/bmr.html
@@ -18,7 +18,7 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>Keith O'Hara</title>
+    <title>Bayesian Macroeconometrics in R (BMR)</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
