--- a/trame_docs_mmfs_ntu.html
+++ b/trame_docs_mmfs_ntu.html
@@ -194,7 +194,7 @@
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;">Transfers</strong></h3>
+<h3 style="text-align: center;"><strong style="font-size: 130%;">MMFs</strong></h3>
 <hr>
 
 <p> &nbsp </p>
