--- a/trame.html
+++ b/trame.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>TraME</title>
+    <title>Transportation Methods for Econometrics (TraME)</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,6 +24,9 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Additional Settings -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
 
     <!-- Syntax Highlighter -->
     <script type="text/javascript" src="js/syntaxhighlighter.js"></script>
@@ -206,9 +209,9 @@
     <tr>
         <td style="text-align: left; vertical-align: top; width: 50%;">
         <ul>
-        <li>Flexible, templated library</li>
-        <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a></li>
-        <li>Can link with Gurobi or GLPK</li>
+            <li>Flexible, templated library</li>
+            <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a></li>
+            <li>Can link with Gurobi or GLPK</li>
         </ul>
         </td>
         <td>
@@ -255,7 +258,7 @@
 make
 make install</pre>
 
-<p>This will install the library into /opt/local</p>
+<p>This will install the library into /usr/local</p>
 
     <hr>
 
