--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-h3:target { padding-top: 60px; margin-top: -60px;}
-</style>
-
 <head>
 
     <meta charset="utf-8">
@@ -18,7 +14,7 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>Keith O'Hara</title>
+    <title>Keith O'Hara - R-devel</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,6 +24,9 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Additional Settings -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
 
     <!-- Syntax Highlighter -->
     <script type="text/javascript" src="js/syntaxhighlighter.js"></script>
@@ -41,14 +40,6 @@ h3:target { padding-top: 60px; margin-top: -60px;}
     <![endif]-->
 
 </head>
-
-<!--
-<style>
-pre {
-    display: inline-block;
-}
-</style>
--->
 
 <body>
 
