--- a/trame_docs_arums.html
+++ b/trame_docs_arums.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-h3:target { padding-top: 60px; margin-top: -60px;}
-</style>
-
 <head>
 
     <meta charset="utf-8">
@@ -28,6 +24,9 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Additional Settings -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
 
     <!-- Syntax Highlighter -->
     <script type="text/javascript" src="js/syntaxhighlighter.js"></script>
