--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     <div class="panel-body">
                         <p>Projects</p>
                         <a href="bmr.html" target="_blank" class="btn btn-default">BMR</a>
+                        <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
                         <a href="trame.html" target="_blank" class="btn btn-default">TraME</a>
                     </div>
                 </div>
