--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Keith O'Hara 2017</p>
                 </div>
             </div>
         </footer>
