--- a/gcem.html
+++ b/gcem.html
@@ -145,7 +145,7 @@ pre {
 
 <p> &nbsp </p>
 
-<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a C++ library of constexpr template functions for compile-time computation of special math functions.</p>
+<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a C++ library of templated constexpr functions for compile-time computation of special functions.</p>
 
 <b>Features</b>
 <br>
