--- a/gcem.html
+++ b/gcem.html
@@ -106,6 +106,10 @@ pre {
                             <li><a href="gcem_docs_sf_erf.html">erf</a></li>
                             <li><a href="gcem_docs_sf_incomplete_beta.html">incomplete_beta</a></li>
                             <li><a href="gcem_docs_sf_incomplete_gamma.html">incomplete_gamma</a></li>
+                            <li class="divider"></li>
+                            <li><a href="gcem_docs_sf_erf_inv.html">erf_inv</a></li>
+                            <li><a href="gcem_docs_sf_incomplete_beta_inv.html">incomplete_beta_inv</a></li>
+                            <li><a href="gcem_docs_sf_incomplete_gamma_inv.html">incomplete_gamma_inv</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
