--- a/gcem_docs_basic_log.html
+++ b/gcem_docs_basic_log.html
@@ -163,7 +163,7 @@ constexpr T log(const T x)
 
 <p>GCE-Math computes the natural logarithm using a continued fraction expansion representation:</p>
 $$\log\left(\frac{1+x}{1-x}\right) = \dfrac{2x}{1-\dfrac{x^2}{3-\dfrac{4x^2}{5 - \dfrac{9x^3}{7 - \ddots}}}}, \ \ x \in [-1,1]$$
-<p>where the argument is split into scientific notation form: $x = a \times 10^c$, for integer $c$.</p>
+<p>The continued fraction argument is split into two parts: $x = a \times 10^c$, where $c$ is an integer.</p>
         <hr>
 
         <!-- Footer -->
