--- a/gcem_docs_basic_exp.html
+++ b/gcem_docs_basic_exp.html
@@ -163,7 +163,7 @@ constexpr T exp(const T x)
 
 <p>GCE-Math computes the exponential function $\exp(x)$ using a continued fraction representation:</p>
 $$\exp(x) = \dfrac{1}{1-\dfrac{x}{1+x-\dfrac{\frac{1}{2}x}{1 + \frac{1}{2}x - \dfrac{\frac{1}{3}x}{1 + \frac{1}{3}x - \ddots}}}}$$
-<p>where the argument is split into $x = n + r$ for integer $n$ and $r \in [-0.5,0.5]$.</p>
+<p>The continued fraction argument is split into two parts: $x = n + r$, where $n$ is an integer and $r \in [-0.5,0.5]$.</p>
 
         <hr>
 
