--- a/statslib.html
+++ b/statslib.html
@@ -97,7 +97,7 @@ pre {
 <a class="github-button" href="https://github.com/kthohr/stats" data-icon="octicon-star" data-count-href="/kthohr/stats/stargazers" data-count-api="/repos/kthohr/stats#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/stats on GitHub">Star</a>
 <a class="github-button" href="https://github.com/kthohr/stats/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/stats/network" data-count-api="/repos/kthohr/stats#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/stats on GitHub">Fork</a></p>
 
-<p> &nbsp </p>
+<hr>
 
 <p>StatsLib is a C++ template library for random variable generation and fast computation of statistical distribution functions.</p>
 
@@ -105,7 +105,7 @@ pre {
 <br>
 <ul>
     <li>Supports the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for matrix-valued operations.</li>
-    <li>Compile-time enabled computation of density functions, cumulative distribution functions, and quantile functions using C++11 constexpr functions and the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
+    <li>Compile-time computation of density functions, cumulative distribution functions, and quantile functions using C++11 constexpr functions and the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
 </ul>
 
 <br>
