--- a/gcem.html
+++ b/gcem.html
@@ -171,7 +171,9 @@ pre {
     <li>The source code is available on <a href="https://github.com/kthohr/gcem" target="_blank">GitHub</a>.</li>
 </ul>
 
-<p>GCE-Math is a header-only library, so no installation is required. To build the test files:</p>
+<p>GCE-Math is a header-only library, so no installation is required beyond copying the contents of the include folder.</p>
+
+<p>To build the test files:</p>
 <pre class="brush: bash;">
 # clone gcem
 git clone -b master --single-branch https://github.com/kthohr/gcem ./gcem
