--- a/statslib.html
+++ b/statslib.html
@@ -121,7 +121,7 @@ pre {
     <li>The source code is available on <a href="https://github.com/kthohr/stats" target="_blank">GitHub</a>.</li>
 </ul>
 
-<p>StatsLib is a header-only library, so no installation is required.</p>
+<p>StatsLib is a header-only library, so no installation is required beyond copying the contents of the include folder.</p>
 
 <p>To build the test files:</p>
 <pre class="brush: bash;">
