--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
+     <!-- Script to Activate the Carousel 
     <script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
     })
-    </script>
+    </script> -->
 
 </body>
 
