--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                         <p>Projects</p>
                         <a href="bmr.html" target="_blank" class="btn btn-default">BMR</a>
                         <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
+                        <a href="optimlib.html" target="_blank" class="btn btn-default">OptimLib</a>
                         <a href="statslib.html" target="_blank" class="btn btn-default">StatsLib</a>
                         <a href="trame.html" target="_blank" class="btn btn-default">TraME</a>
                     </div>
