--- a/gcem.html
+++ b/gcem.html
@@ -149,7 +149,7 @@ pre {
 
 <hr>
 
-<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a C++ template library of constexpr functions for compile-time computation of special functions.</p>
+<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a templated C++ library of constexpr functions for compile-time computation of special functions.</p>
 
 <b>Features</b>
 <br>
