--- a/statslib.html
+++ b/statslib.html
@@ -99,7 +99,7 @@ pre {
 
 <hr>
 
-<p>StatsLib is a C++ template library for random variable generation and fast computation of statistical distribution functions.</p>
+<p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p>
 
 <b>Features</b>
 <br>
