--- a/gcem.html
+++ b/gcem.html
@@ -138,7 +138,7 @@ pre {
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Generalized Constant Expression Math (GCE-Math)</u></strong></h3>
+<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Generalized Constant Expression Math</u></strong></h3>
 <p> &nbsp </p>
 
 <p><a href="https://travis-ci.org/kthohr/gcem" target="_blank"><img src="https://travis-ci.org/kthohr/gcem.svg?branch=master" alt="gcem Build"></a>
@@ -154,9 +154,10 @@ pre {
 <b>Features</b>
 <br>
 <ul>
-    <li>Extensive use of <a href="http://en.cppreference.com/w/cpp/language/constexpr" target="_blank"> constexpr functions</a> and recursive templates enables compile-time computation of common operations that may dramatically reduce the overall run time of a program.</li>
+    <li>Extensive use of <a href="http://en.cppreference.com/w/cpp/language/constexpr" target="_blank">constexpr functions</a> and recursive templates.</li>
+    <li>Enables compile-time computation of common operations to reduce the overall runtime of a program.</li>
     <li>The library is written in concise C++11 constexpr format, and is C++14 compatible.</li>
-    <li>Continued fraction representions are used to obtain greater accuracy with a minimal number of template iterations.</li>
+    <li>Use of continued fraction representions obtain greater accuracy with a minimal number of template iterations.</li>
     <li>Extensively tested and accurate to machine precision against the standard library.</li>
 </ul>
 
@@ -173,7 +174,7 @@ pre {
     <li>The source code is available on <a href="https://github.com/kthohr/gcem" target="_blank">GitHub</a>.</li>
 </ul>
 
-<p>GCE-Math is a header-only library, so no installation is required beyond copying the contents of the include folder.</p>
+<p>GCE-Math is a header-only library, so no installation is required. Simply include the gcem header files with your project.</p>
 
 <p>To build the test files:</p>
 <pre class="brush: bash;">
