--- a/optimlib.html
+++ b/optimlib.html
@@ -100,7 +100,7 @@ pre {
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Optim</u></strong></h3>
+<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>OptimLib</u></strong></h3>
 <p> &nbsp </p>
 
 <p><a href="https://travis-ci.org/kthohr/optim" target="_blank"><img src="https://travis-ci.org/kthohr/optim.svg?branch=master" alt="optim Build"></a>
